<resources>
    <string name="app_name">PhasmaFood</string>
    <string name="selectTypeOfAnalysis">Please select type\nof analysis</string>
    <string name="selectTypeOfFood">Please select type of food\nbeing analysed</string>
    <string name="specifyScanningConditions">Please specify scanning conditions</string>
    <string name="measurementGuide">Measurement guide</string>
    <string name="analysisResults">Analysis results</string>
    <string name="scanningParamsSummary">Scanning parameters\nsummary</string>
    <string name="profileSaved">Profile data saved</string>
    <string name="profileSavingError">Error while saving profile data</string>
    <string name="fillAllFields">Please fill all fields</string>
    <string name="signingInError">Error while signing in</string>
    <string name="signingOutError">Error while signing out</string>
    <string name="passwordsDoNotMatch">Passwords don\'t match</string>
    <string name="accountCreated">Account successfully created</string>
    <string name="errorSendingToken">Error sending token!</string>
    <string name="networkNotEnabled">Network not enabled</string>
    <string name="bluetoothNotEnabled">Bluetooth not enabled</string>
    <string name="sendDataMessage">Send data to PhasmaFood device via Bluetooth?</string>
    <string name="finish">Finish</string>
    <string name="configureParams">Configure params</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="summary">Summary</string>
    <string name="resultsReceived">Measurement completed!</string>
    <string name="seeYourResults">Results:</string>
    <string name="fusion">Data fusion:</string>
    <string name="camera">Camera</string>
    <string name="captureImageWhite">Capture image - white LEDs</string>
    <string name="captureImageUV">Capture image - UV</string>
    <string name="captureImageNIR">Capture image - NIR</string>
    <string name="exposureTimeWhiteLeds">Exposure time - white LEDs [us]</string>
    <string name="exposureTimeUV">Exposure time - UV [us]</string>
    <string name="exposureTimeNIR">Exposure time - NIR [us]</string>
    <string name="enterTime">Enter time</string>
    <string name="enterValue">Enter value</string>
    <string name="nir">NIR</string>
    <string name="spectrometerSingleShot">Spectrometer - single shot</string>
    <string name="spectrometerAverages">Spectrometer - averages</string>
    <string name="microlampsDrivingCurrent">Microlamps - driving current [mA]</string>
    <string name="microlampsWarmingTime">Spectrometer - warming time [ms]</string>
    <string name="vis">VIS</string>
    <string name="exposureTimeVisibleReflectance">Exposure time for visible reflectance spectra [us]</string>
    <string name="whiteLEDs">Driving current for visible reflectance measurements [mA]</string>
    <string name="exposureTimeFluorescence">Exposure time for fluorescence spectra [us]</string>
    <string name="UVLEDs">Driving current for fluorescence measurements [mA]</string>
    <string name="fluo">FLUO</string>
    <string name="preprocessed">Preproc.</string>
    <string name="dark">Dark ref</string>
    <string name="white">White ref</string>
    <string name="showAll">Show all</string>
    <string name="homeScreenTitle">Welcome!</string>
    <string name="alfatoxinName">Alfatoxin Name</string>
    <string name="alfatoxinValue">Alfatoxin Value</string>
    <string name="alfatoxinUnit">Alfatoxin Unit</string>
    <string name="microbiologicalUnit">Microbiological Unit</string>
    <string name="microbiologicalValue">Microbiological Value</string>
    <string name="channel_name">channelPhasmaFood</string>
    <string name="channel_description">Receiving data from BLE device</string>
    <string name="rawData">Raw data</string>
    <string name="rawDark">Raw dark</string>
    <string name="rawWhite">Raw white</string>
    <string name="visAnalysis">VIS data analysis:</string>
    <string name="nirAnalysis">NIR data analysis:</string>
    <string name="fluoAnalysis">FLUO data analysis:</string>
    <string name="na">N/A</string>
    <string name="storeOnServerAndAnalyze">Send to server (store &amp; analyze)</string>
    <string name="storeOnServer">Send to server (store only)</string>
    <string name="goBackAndRetest">Go back and retest</string>
    <string name="waveMeasurementMarker">%s\n%s</string>
    <string name="sendRequest">Send request</string>
    <string name="setDefaults">Set defaults</string>
    <string name="useCase1LabelsTitle">Configure use case 1 labels</string>
    <string name="useCase2LabelsTitle">Configure use case 2 labels</string>
    <string name="granularity">Granularity:</string>
    <string name="temperatureString">Temperature</string>
    <string name="resultsFromServer">Food Analysis Finished!</string>
    <string name="resultsFromBtDevice">Measurement data from PhasmaFood device</string>
    <string name="sendRequestToBtDevice">Send request to\nBluetooth device</string>
    <string name="sendRequestInfo">Parameters selected in wizard\nwill be sent to a connected\nPhasma food bluetooth device.\nMeasurement progress can be\nobserved in a notification bar.</string>
    <string name="timestamp">Timestamp:</string>
    <string name="cancelOngoingMeasurement">Cancel ongoing\nmeasurement?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="processingInfo">Measurement processing</string>
    <string name="processingRequestSent">Sent! Waiting for response from server, may take up to 15sec</string>
    <string name="resultsSuccessfullyProcessed">Results successfully processed</string>
    <string name="errorSendingResultsToServer">Error sending results to server</string>
    <string name="microbioSampleId">Microb. Sample ID</string>
    <string name="packageParam">Package</string>
    <string name="useCase3Title">Food adulteration params</string>
    <string name="adulterationSampleID">Adulteration Sample ID:</string>
    <string name="diluted">Diluted %:</string>
    <string name="hazard1">Hazard 1 name:</string>
    <string name="hazard1Percent">Hazard 1 %:</string>
    <string name="hazard2">Hazard 2 name:</string>
    <string name="hazard2Percent">Hazard 2 %:</string>
    <string name="purity">Purity SMP in w/w (%):</string>
    <string name="lowValueFiller">Low value filler:</string>
    <string name="nitrogenEnhancer">Nitrogen enhancer:</string>
    <string name="otherSpecies">Other species in w/w (%):</string>
    <string name="dilution1">Dilution 1 (source):</string>
    <string name="dilution1Percent">Dilution 1 %:</string>
    <string name="dilution2">Dilution 2 (source):</string>
    <string name="dilution2Percent">Dilution 2 (%):</string>
    <string name="lightsOnDurationTime">Lights ON duration [s]</string>
    <string name="useCaseTestLabelsTitle">Test params</string>
    <string name="sampleId">Sample ID: %s</string>
    <string name="analysis">Analyzing successfully completed</string>
    <string name="successfullyStoredInCloud">Successfully stored in cloud DB</string>
    <string name="alcoholLabel">Alcohol label:</string>
    <string name="spiritType">Spirit type:</string>
    <string name="authentic">Authentic:</string>
</resources>
