<?xml version="1.0" encoding="utf-8"?><!--Use case 3 additional labels-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/configurationTowHeight"
        android:orientation="horizontal"
        android:paddingStart="@dimen/configurationHorizontalRowPadding"
        android:paddingTop="@dimen/configurationVerticalRowPadding"
        android:paddingEnd="@dimen/configurationHorizontalRowPadding"
        android:paddingBottom="@dimen/configurationVerticalRowPadding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/alcoholLabel"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/alcoholLabel"
            style="@style/PFEditTextLetters"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/enterValue"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/configurationTowHeight"
        android:orientation="horizontal"
        android:paddingStart="@dimen/configurationHorizontalRowPadding"
        android:paddingTop="@dimen/configurationVerticalRowPadding"
        android:paddingEnd="@dimen/configurationHorizontalRowPadding"
        android:paddingBottom="@dimen/configurationVerticalRowPadding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/spiritType"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/spiritType"
            style="@style/PFEditTextLetters"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/enterValue"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
